[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "playground"
authors = [
    {name = "Justin Slay", email = "justin.slay@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dynamic = [
    "version",
    "description",
]

[project.optional-dependencies]
test = [
    "pytest>=2.7.3",
    "tox"
]

[project.urls]
Source = "https://github.com/jslay88/playground"

[project.scripts]
hello_world = "playground.main:hello_world"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
lines_after_imports = 2
skip = [".tox", "venv"]
